# brut

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: s_entropy_benchmark.rs
config/: default.toml  oscillatory.toml  s_entropy.toml
demo/: INSTALLATION_TROUBLESHOOTING.md  JSON_MIGRATION_GUIDE.md  README.md  SCRIPT_TEMPLATE.py  SCRIPT_UPDATE_GUIDE.md  automated_script_fixer.py  batch_update_scripts.py  fix_installation.py  fix_venv.bat  integrated_s_entropy_demo.py  requirements-simple.txt  requirements.txt  setup.py  visualisation-template.md
demo/public/: basic_activity_metrics_results.json  compression_results.json  energy_expenditure_results.json  intensity_based_activity_results.json  postural_analysis_results.json
demo/public/combined/: activity_sleep_correlation_results.json  advanced_cardiac_results.json  autonomic_integration_results.json  cardiac_coherence_results.json  chronotropic_response_results.json  circadian_rhythm_results.json  deep_sleep_results.json  directional_mapping_results.json  empty_dictionary.json  hrv_frequency_domain_results.json  hrv_nonlinear_results.json  hrv_time_domain_results.json  movement_patterns_results.json  rem_sleep_results.json  sleep_architecture_results.json  sleep_heart_rate_results.json  sleep_respiratory_results.json  sleep_timing_efficiency_results.json
demo/src/actigraphy/: basic_metrics.py  basic_metrics_visualisation.py  compression_visualisation.py  directional_mapping_visualisation.py  energy_expenditure_metrics.py  expenditure_visualisation.py  intensity_based_metrics.py  intensity_visualisations.py  movement_pattern_metrics.py  (+4 more)
docs/publication/: heart-rate-large-language-models.tex
examples/: basic_usage.rs
src/: compression.rs  config.rs  encoding.rs  lib.rs  linguistic.rs  main.rs  navigation.rs  oscillatory.rs  types.rs  utils.rs
(+43 files in other folders)
