[package]
name = "brut"
version = "0.1.0"
edition = "2021"
authors = ["Kundai F. Sachikonye <k.sachikonye@tum.de>"]
description = "S-Entropy Coordinate Navigation for Consumer-Grade Physiological Sensor Analysis"
license = "MIT"
repository = "https://github.com/kundaik/brut"
keywords = ["biosignals", "entropy", "oscillatory", "physiological", "sensors"]
categories = ["science", "algorithms", "mathematics"]

[dependencies]
# Mathematical operations
nalgebra = "0.32"
ndarray = "0.15"
num-complex = "0.4"

# Signal processing
rustfft = "6.1"
realfft = "3.3"

# Statistical analysis
statrs = "0.16"

# Compression and encoding
flate2 = "1.0"
lz4_flex = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Temporal operations
chrono = { version = "0.4", features = ["serde"] }

# Parallel processing
rayon = "1.7"

# Command line interface
clap = { version = "4.4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
toml = "0.8"

# Random number generation (extended)
rand_chacha = "0.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

[[bench]]
name = "s_entropy_benchmark"
harness = false

[lib]
name = "brut"
path = "src/lib.rs"

[[bin]]
name = "brut"
path = "src/main.rs"

[features]
default = ["standard"]
standard = []
gpu = ["cudarc"]
visualization = ["plotters"]

[dependencies.cudarc]
version = "0.9"
optional = true

[dependencies.plotters]
version = "0.3"
optional = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = false
lto = true
